<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activity.AudioBookActivity">

    <TextView
        android:id="@+id/toplabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_black"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/booktitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:text="@string/app_name"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toplabel" />

    <ImageView
        android:id="@+id/prevbtn"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_marginStart="10dp"
        app:tint="#B2FFFFFF"
        android:src="@drawable/prev"
        app:layout_constraintBottom_toBottomOf="@id/bookcover"
        app:layout_constraintTop_toTopOf="@id/bookcover"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_marginTop="30dp"
        android:id="@+id/bookcover"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toEndOf="@id/prevbtn"
        app:layout_constraintEnd_toStartOf="@id/nextbtn"
        app:layout_constraintTop_toBottomOf="@id/booktitle" />

    <ImageView
        android:id="@+id/nextbtn"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/next"
        app:tint="#B2FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/bookcover"
        app:layout_constraintTop_toTopOf="@id/bookcover" />


    <SeekBar
        android:id="@+id/audioseekbar"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/bookcover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_width="0dp"
        android:progress="0"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        android:secondaryProgressTint="@color/white"
        android:progressBackgroundTint="@color/white"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/starttime"
        android:text="00:00:00"
        android:padding="15dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/audioseekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/speed"
        android:text="@string/_1_0x"
        android:textColor="@color/white"
        android:padding="15dp"
        android:fontFamily="@font/rubik_regular"
        app:layout_constraintStart_toEndOf="@id/starttime"
        app:layout_constraintEnd_toStartOf="@id/centerview"
        app:layout_constraintTop_toBottomOf="@id/audioseekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/centerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audioseekbar"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"/>


    <TextView
        android:id="@+id/timer"
        android:text="@string/_0_min"
        android:textColor="@color/white"
        android:padding="15dp"
        android:fontFamily="@font/rubik_regular"
        app:layout_constraintStart_toEndOf="@id/centerview"
        app:layout_constraintEnd_toStartOf="@id/endtime"
        app:layout_constraintTop_toBottomOf="@id/audioseekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/endtime"
        android:text="@string/_00_00_00"
        android:padding="15dp"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/audioseekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:id="@+id/back15btn"
        android:layout_width="50dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/prevbtn"
        android:src="@drawable/back"
        app:layout_constraintTop_toBottomOf="@id/starttime">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            app:tint="#B2FFFFFF" />
        <TextView
            android:text="@string/_15"
            android:textSize="14sp"
            android:padding="0dp"
            android:layout_marginTop="5dp"
            android:textColor="#B3FFFFFF"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:id="@+id/playpause"
        android:layout_width="50dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@id/next15btn"
        app:layout_constraintStart_toEndOf="@+id/back15btn"
        android:src="@drawable/back"
        app:layout_constraintTop_toBottomOf="@id/starttime">
        <ImageView
            android:id="@+id/playpauseimg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pause"
            app:tint="#B2FFFFFF" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:id="@+id/next15btn"
        android:layout_width="50dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@id/nextbtn"
        android:src="@drawable/back"
        app:layout_constraintTop_toBottomOf="@id/starttime">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fore"
            app:tint="#B2FFFFFF" />
        <TextView
            android:text="@string/_15"
            android:textSize="14sp"
            android:padding="0dp"
            android:layout_marginTop="5dp"
            android:textColor="#B3FFFFFF"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>